--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       to { text-shadow: 0 0 25px #e6b3ff, 0 0 40px #b84cff; }
     }
 
-    .search-box {
+    .display-box {
       width: 300px;
       padding: 12px;
       background: rgba(255, 255, 255, 0.05);
@@ -41,31 +41,25 @@
       box-shadow: 0 0 10px #b84cff;
       color: #d0a8ff;
       text-align: center;
-      outline: none;
       font-size: 14px;
+      user-select: none;
+      pointer-events: none;
+      animation: textglow 3s infinite alternate;
     }
 
-    .search-box::placeholder {
-      color: #9d6ee8;
+    @keyframes textglow {
+      from { text-shadow: 0 0 5px #b84cff; color: #cfa6ff; }
+      to { text-shadow: 0 0 25px #e6b3ff, 0 0 40px #b84cff; color: #fff; }
     }
 
-    .kitty {
-      position: absolute;
-      bottom: 40px;
-      right: 40px;
-      width: 120px;
-      opacity: 0.8;
-      filter: drop-shadow(0 0 15px #b84cff);
-    }
-
-    /* Cobweb effect */
+    /* Subtle cobwebs in corners */
     .web {
       position: absolute;
       background: url('https://i.imgur.com/1X7Oa8F.png') no-repeat center;
       background-size: contain;
       width: 300px;
       height: 300px;
-      opacity: 0.15;
+      opacity: 0.12;
       top: 0;
       left: 0;
     }
@@ -87,7 +81,6 @@
   <div class="web"></div>
   <div class="web2"></div>
   <h1>HelloKitty.cc</h1>
-  <input type="text" class="search-box" placeholder="">
-  <img class="kitty" src="https://upload.wikimedia.org/wikipedia/en/0/05/Hello_Kitty_character_portrait.png" alt="Hello Kitty">
+  <div class="display-box">LLJVR</div>
 </body>
 </html>
