--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
   <div class="web"></div>
   <div class="web2"></div>
   <h1>HelloKitty.cc</h1>
-  <div class="display-box">LLJVR</div>
+  <div class="display-box">LLJVR the larp
+  </div>
 </body>
 </html>
