--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HelloKitty.cc</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
@@ -56,7 +56,7 @@
       to { text-shadow: 0 0 25px #e6b3ff, 0 0 40px #b84cff; color: #fff; }
     }
 
-    /* Animated Sea and Birds */
+    /* Ocean waves */
     .ocean {
       position: absolute;
       bottom: 0;
@@ -82,32 +82,56 @@
       to { transform: translateX(-50%); }
     }
 
+    /* Birds SVG overlay */
     .birds {
       position: absolute;
       top: 15%;
-      left: -10%;
-      width: 120%;
+      left: 0;
+      width: 100%;
       height: 20%;
-      background: url('https://i.imgur.com/MohhK5S.png') repeat-x;
-      background-size: 200px auto;
+      pointer-events: none;
+      z-index: 1;
+      overflow: hidden;
+    }
+
+    .birds svg {
+      width: 200%;
+      height: 100%;
       animation: fly 25s linear infinite;
       opacity: 0.6;
-      z-index: 1;
     }
 
     @keyframes fly {
-      from { background-position: 0 0; }
-      to { background-position: 100% 0; }
+      from { transform: translateX(0); }
+      to { transform: translateX(-50%); }
     }
   </style>
 </head>
 <body>
-  <div class="birds"></div>
+  <!-- Birds overlay — embedded SVG -->
+  <div class="birds">
+    <svg viewBox="0 0 1200 200" preserveAspectRatio="xMidYMid slice">
+      <defs>
+        <path id="bird-path" d="M0,100 Q300,20 600,100 T1200,100" fill="none" />
+      </defs>
+      <g fill="#ffffff">
+        <!-- Multiple birds as small path shapes -->
+        <path d="M150,80 l10,-10 l10,10 l-10,10 Z" />
+        <path d="M300,90 l12,-8 l8,8 l-12,12 Z" />
+        <path d="M450,70 l8,-12 l12,12 l-8,8 Z" />
+        <path d="M600,85 l10,-9 l9,9 l-10,10 Z" />
+        <path d="M750,75 l11,-11 l11,11 l-11,11 Z" />
+        <path d="M900,95 l10,-8 l8,8 l-10,10 Z" />
+        <path d="M1050,80 l9,-9 l9,9 l-9,9 Z" />
+      </g>
+    </svg>
+  </div>
+
   <div class="ocean">
     <div class="wave"></div>
   </div>
 
   <h1>HelloKitty.cc</h1>
-  <div class="display-box">LLJVR</div>
+  <div class="display-box">LLJVR wannabe doxxer</div>
 </body>
 </html>
