--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      background: linear-gradient(to top, #00111f, #203060);
       font-family: 'Press Start 2P', cursive;
       color: #d0a8ff;
+      background: url('background.gif') no-repeat center center fixed;
+      background-size: cover;
     }
 
-    /* Title */
     h1 {
       font-size: 2em;
       text-shadow: 0 0 15px #b84cff, 0 0 30px #b84cff;
@@ -34,15 +34,14 @@
       to { text-shadow: 0 0 25px #e6b3ff, 0 0 40px #b84cff; }
     }
 
-    /* Display Box */
     .display-box {
       width: 300px;
       padding: 12px;
-      background: rgba(255, 255, 255, 0.05);
+      background: rgba(0, 0, 0, 0.5);
       border: 2px solid #b84cff;
       border-radius: 10px;
       box-shadow: 0 0 10px #b84cff;
-      color: #d0a8ff;
+      color: #fff;
       text-align: center;
       font-size: 14px;
       user-select: none;
@@ -56,82 +55,24 @@
       to { text-shadow: 0 0 25px #e6b3ff, 0 0 40px #b84cff; color: #fff; }
     }
 
-    /* Ocean waves */
-    .ocean {
+    /* Optional dark overlay for contrast */
+    .overlay {
       position: absolute;
-      bottom: 0;
-      width: 100%;
-      height: 40%;
-      background: linear-gradient(to top, #00111f, #003366);
-      overflow: hidden;
-      z-index: 0;
-    }
-
-    .wave {
-      position: absolute;
-      width: 200%;
-      height: 100%;
-      background: radial-gradient(circle at 50% 50%, rgba(255,255,255,0.15) 2%, transparent 2%) repeat-x;
-      background-size: 100px 100px;
-      opacity: 0.15;
-      animation: wave 10s linear infinite;
-    }
-
-    @keyframes wave {
-      from { transform: translateX(0); }
-      to { transform: translateX(-50%); }
-    }
-
-    /* Birds SVG overlay */
-    .birds {
-      position: absolute;
-      top: 15%;
+      top: 0;
       left: 0;
       width: 100%;
-      height: 20%;
-      pointer-events: none;
-      z-index: 1;
-      overflow: hidden;
-    }
-
-    .birds svg {
-      width: 200%;
       height: 100%;
-      animation: fly 25s linear infinite;
-      opacity: 0.6;
-    }
-
-    @keyframes fly {
-      from { transform: translateX(0); }
-      to { transform: translateX(-50%); }
+      background: rgba(0, 0, 30, 0.3);
+      z-index: 1;
     }
   </style>
 </head>
 <body>
-  <!-- Birds overlay — embedded SVG -->
-  <div class="birds">
-    <svg viewBox="0 0 1200 200" preserveAspectRatio="xMidYMid slice">
-      <defs>
-        <path id="bird-path" d="M0,100 Q300,20 600,100 T1200,100" fill="none" />
-      </defs>
-      <g fill="#ffffff">
-        <!-- Multiple birds as small path shapes -->
-        <path d="M150,80 l10,-10 l10,10 l-10,10 Z" />
-        <path d="M300,90 l12,-8 l8,8 l-12,12 Z" />
-        <path d="M450,70 l8,-12 l12,12 l-8,8 Z" />
-        <path d="M600,85 l10,-9 l9,9 l-10,10 Z" />
-        <path d="M750,75 l11,-11 l11,11 l-11,11 Z" />
-        <path d="M900,95 l10,-8 l8,8 l-10,10 Z" />
-        <path d="M1050,80 l9,-9 l9,9 l-9,9 Z" />
-      </g>
-    </svg>
-  </div>
-
-  <div class="ocean">
-    <div class="wave"></div>
-  </div>
-
+  <div class="overlay"></div>
   <h1>HelloKitty.cc</h1>
   <div class="display-box">LLJVR wannabe doxxer</div>
 </body>
 </html>
+
+
+ 
