--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
       justify-content: center;
       font-family: 'Press Start 2P', cursive;
       color: #d0a8ff;
-      background-color: cyan; /* changed to cyan */
+      background-color: cyan;
+      perspective: 1000px;
+      position: relative;
     }
 
+    /* Glowing title */
     h1 {
       font-size: 2em;
       text-shadow: 0 0 15px #b84cff, 0 0 30px #b84cff;
       margin-bottom: 40px;
       animation: glow 2s infinite alternate;
+      position: relative;
       z-index: 2;
     }
 
@@ -33,14 +37,15 @@
       to { text-shadow: 0 0 25px #e6b3ff, 0 0 40px #b84cff; }
     }
 
+    /* Boxes */
     .display-box {
       width: 300px;
       padding: 12px;
       margin-bottom: 20px;
       background: rgba(0, 0, 0, 0.5);
       border: 2px solid #b84cff;
-      border-radius: 10px;
-      box-shadow: 0 0 10px #b84cff;
+      border-radius: 15px;
+      box-shadow: 0 0 15px #b84cff;
       color: #fff;
       text-align: center;
       font-size: 14px;
@@ -48,11 +53,17 @@
       pointer-events: none;
       animation: textglow 3s infinite alternate;
       z-index: 2;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .display-box:hover {
+      transform: scale(1.05) rotate(-2deg);
+      box-shadow: 0 0 30px #b84cff, 0 0 50px #e6b3ff;
     }
 
     .display-box.secondary {
       border-color: #4cffb8;
-      box-shadow: 0 0 10px #4cffb8;
+      box-shadow: 0 0 15px #4cffb8;
       animation: textglow2 3s infinite alternate;
     }
 
@@ -66,6 +77,39 @@
       to { text-shadow: 0 0 25px #80fff0, 0 0 40px #4cffb8; color: #fff; }
     }
 
+    /* Sparkles */
+    .sparkle {
+      position: absolute;
+      width: 6px;
+      height: 6px;
+      background: white;
+      border-radius: 50%;
+      box-shadow: 0 0 10px #fff;
+      animation: sparkleAnim 3s infinite;
+    }
+
+    @keyframes sparkleAnim {
+      0% { opacity: 0; transform: translateY(0) rotate(0deg); }
+      50% { opacity: 1; transform: translateY(-20px) rotate(180deg); }
+      100% { opacity: 0; transform: translateY(0) rotate(360deg); }
+    }
+
+    /* Floating shapes background */
+    .shape {
+      position: absolute;
+      width: 40px;
+      height: 40px;
+      background: linear-gradient(45deg, #b84cff, #4cffb8);
+      opacity: 0.3;
+      border-radius: 50%;
+      animation: floatShape linear infinite;
+    }
+
+    @keyframes floatShape {
+      0% { transform: translateY(100vh) rotate(0deg); }
+      100% { transform: translateY(-100vh) rotate(360deg); }
+    }
+
     .overlay {
       position: absolute;
       top: 0;
@@ -75,6 +119,7 @@
       background: rgba(0, 0, 30, 0.2);
       z-index: 1;
     }
+
   </style>
 </head>
 <body>
@@ -88,8 +133,23 @@
     <source src="chill-music.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
+
+  <!-- Sparkles -->
+  <div class="sparkle" style="top:10%; left:20%; animation-delay:0s;"></div>
+  <div class="sparkle" style="top:30%; left:70%; animation-delay:1s;"></div>
+  <div class="sparkle" style="top:60%; left:40%; animation-delay:2s;"></div>
+  <div class="sparkle" style="top:80%; left:80%; animation-delay:3s;"></div>
+
+  <!-- Floating shapes -->
+  <div class="shape" style="left:10%; animation-duration:20s;"></div>
+  <div class="shape" style="left:50%; animation-duration:25s;"></div>
+  <div class="shape" style="left:80%; animation-duration:22s;"></div>
+  <div class="shape" style="left:30%; animation-duration:18s;"></div>
+  <div class="shape" style="left:70%; animation-duration:30s;"></div>
+
 </body>
 </html>
+
 
 
 
