--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HelloKitty.cc</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
@@ -12,8 +12,8 @@
       height: 100vh;
       overflow: hidden;
       font-family: 'Press Start 2P', cursive;
-      background-color: black; /* hacker vibe */
-      color: #00ff00; /* terminal green */
+      background-color: black;
+      color: #00ff00;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -22,7 +22,6 @@
       position: relative;
     }
 
-    /* Hacker code rain canvas */
     canvas {
       position: absolute;
       top: 0;
@@ -46,7 +45,6 @@
       to { text-shadow: 0 0 20px #00ff00, 0 0 40px #00ff00; }
     }
 
-    /* Side-by-side boxes */
     .boxes {
       display: flex;
       gap: 50px;
@@ -64,9 +62,16 @@
       text-align: center;
       font-size: 14px;
       user-select: none;
-      pointer-events: none;
+      cursor: pointer;
+      pointer-events: auto;
       animation: textglow 3s infinite alternate;
       font-family: 'Courier New', monospace;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .display-box:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 30px #00ff00, 0 0 50px #c0ffc0;
     }
 
     @keyframes textglow {
@@ -74,22 +79,6 @@
       to { text-shadow: 0 0 15px #00ff00, 0 0 30px #00ff00; color: #c0ffc0; }
     }
 
-    /* Floating hacker-style symbols */
-    .symbol {
-      position: absolute;
-      color: #00ff00;
-      font-size: 14px;
-      user-select: none;
-      opacity: 0.2;
-      animation: floatSymbol linear infinite;
-    }
-
-    @keyframes floatSymbol {
-      0% { transform: translateY(100vh) rotate(0deg); }
-      100% { transform: translateY(-100vh) rotate(360deg); }
-    }
-
-    /* Sparkles for cyber vibes */
     .sparkle {
       position: absolute;
       width: 6px;
@@ -105,6 +94,46 @@
       50% { opacity: 1; transform: translateY(-20px) rotate(180deg); }
       100% { opacity: 0; transform: translateY(0) rotate(360deg); }
     }
+
+    /* Modal styles */
+    .modal {
+      display: none; /* hidden by default */
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.8);
+      z-index: 10;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: rgba(0,0,0,0.9);
+      border: 2px solid #00ff00;
+      padding: 30px;
+      border-radius: 10px;
+      color: #00ff00;
+      font-family: 'Courier New', monospace;
+      text-align: center;
+      position: relative;
+      box-shadow: 0 0 30px #00ff00;
+    }
+
+    .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 18px;
+      cursor: pointer;
+      color: #00ff00;
+      font-weight: bold;
+    }
+
+    .close-btn:hover {
+      color: #c0ffc0;
+    }
   </style>
 </head>
 <body>
@@ -114,7 +143,7 @@
   <h1>HelloKitty.cc</h1>
 
   <div class="boxes">
-    <div class="display-box">LLJVR</div>
+    <div class="display-box" onclick="showOwners()">Owners</div>
     <div class="display-box">Rtf The Larp</div>
   </div>
 
@@ -129,6 +158,16 @@
     <source src="chill-music.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
+
+  <!-- Modal -->
+  <div class="modal" id="ownersModal">
+    <div class="modal-content">
+      <span class="close-btn" onclick="closeModal()">&times;</span>
+      <h2>Owners</h2>
+      <p>NetGov</p>
+      <p>NetGov Jr</p>
+    </div>
+  </div>
 
   <script>
     // Matrix code rain
@@ -167,9 +206,28 @@
       canvas.width = window.innerWidth;
       canvas.height = window.innerHeight;
     });
+
+    // Modal functions
+    const modal = document.getElementById('ownersModal');
+
+    function showOwners() {
+      modal.style.display = 'flex';
+    }
+
+    function closeModal() {
+      modal.style.display = 'none';
+    }
+
+    // Close modal on clicking outside content
+    window.onclick = function(event) {
+      if (event.target === modal) {
+        modal.style.display = 'none';
+      }
+    }
   </script>
 </body>
 </html>
+
 
 
 
