--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@ h1 {
 .close-btn { position:absolute; top:10px; right:15px; font-size:18px; cursor:pointer; color:#00ff00; font-weight:bold; }
 .close-btn:hover { color:#c0ffc0; }
 
-.unmute-btn {
+/* Buttons */
+.unmute-btn, .skip-btn {
   position: fixed;
   bottom: 60px;
   right: 20px;
@@ -120,7 +121,8 @@ h1 {
   border-radius: 5px;
   text-align: center;
 }
-.unmute-btn:hover { background: rgba(0,0,0,0.9); box-shadow:0 0 20px #00ff00; }
+.skip-btn { bottom: 100px; }
+.unmute-btn:hover, .skip-btn:hover { background: rgba(0,0,0,0.9); box-shadow:0 0 20px #00ff00; }
 
 .music-warning {
   position: fixed;
@@ -165,32 +167,31 @@ h1 {
   </div>
 </div>
 
-<!-- YouTube API controlled music -->
 <div id="bgMusic"></div>
 
 <div class="unmute-btn" onclick="unmuteMusic()">Unmute Music</div>
+<div class="skip-btn" onclick="skipToSecond()">Skip to 2nd Song</div>
+
 <div class="music-warning" id="musicWarning">It might take a minute for music to start</div>
 
 <script src="https://www.youtube.com/iframe_api"></script>
 <script>
   // Matrix code rain
-  const canvas = document.getElementById('matrix');
-  const ctx = canvas.getContext('2d');
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
-  const letters = '01ABCDEFGHIJKLMNOPQRSTUVWXYZ@#$%^&*()*&^%';
-  const fontSize = 16;
-  const columns = canvas.width / fontSize;
-  const drops = Array(Math.floor(columns)).fill(1);
-  function draw() {
-    ctx.fillStyle = 'rgba(0,0,0,0.05)';
+  const canvas=document.getElementById('matrix');
+  const ctx=canvas.getContext('2d');
+  canvas.width=window.innerWidth; canvas.height=window.innerHeight;
+  const letters='01ABCDEFGHIJKLMNOPQRSTUVWXYZ@#$%^&*()*&^%';
+  const fontSize=16;
+  const columns=canvas.width/fontSize;
+  const drops=Array(Math.floor(columns)).fill(1);
+  function draw(){
+    ctx.fillStyle='rgba(0,0,0,0.05)';
     ctx.fillRect(0,0,canvas.width,canvas.height);
-    ctx.fillStyle='#00ff00';
-    ctx.font=fontSize+'px monospace';
+    ctx.fillStyle='#00ff00'; ctx.font=fontSize+'px monospace';
     for(let i=0;i<drops.length;i++){
       const text=letters[Math.floor(Math.random()*letters.length)];
       ctx.fillText(text,i*fontSize,drops[i]*fontSize);
-      if(drops[i]*fontSize>canvas.height && Math.random()>0.975){drops[i]=0;}
+      if(drops[i]*fontSize>canvas.height && Math.random()>0.975){ drops[i]=0; }
       drops[i]++;
     }
   }
@@ -231,7 +232,11 @@ h1 {
 
   // Unmute music
   function unmuteMusic(){ player.unMute(); document.querySelector('.unmute-btn').style.display='none'; document.getElementById('musicWarning').style.display='none'; }
+
+  // Skip to second song
+  function skipToSecond(){ currentSong=1; player.loadVideoById(songs[currentSong]); }
 </script>
 </body>
 </html>
+
 
