--- a/index.html
+++ b/index.html
@@ -152,7 +152,13 @@ h1 {
   font-family: 'Courier New', monospace;
   font-size: 12px;
   text-align: center;
-  transition: all 0.3s;
+  animation: neonFlicker 1.5s infinite;
+}
+
+@keyframes neonFlicker {
+  0%,100% { opacity:1; text-shadow:0 0 5px #00ff00,0 0 10px #00ff00; }
+  50% { opacity:0.8; text-shadow:0 0 20px #00ff00,0 0 30px #c0ffc0; }
+  25%,75% { opacity:0.9; text-shadow:0 0 10px #00ff00,0 0 20px #00ff00; }
 }
 </style>
 </head>
@@ -230,7 +236,7 @@ h1 {
   // YouTube IFrame API music queue
   let player;
   const songs=['xeNf2EKkpi4','mhg4J39rRdE'];
-  const songNames=['Song 1','Song 2']; // You can replace with actual titles
+  const songNames=['Song 1','Song 2'];
   const nowPlaying=document.getElementById('nowPlaying');
   let currentSong=0;
 
@@ -257,9 +263,13 @@ h1 {
   function unmuteMusic(){ player.unMute(); document.querySelector('.unmute-btn').style.display='none'; document.getElementById('musicWarning').style.display='none'; }
 
   // Skip to second song
-  function skipToSecond(){ currentSong=1; player.loadVideoById(songs[currentSong]); updateNowPlaying(); }
+  function skipToSecond(){
+    currentSong=1;
+    player.loadVideoById(songs[currentSong]);
+    updateNowPlaying();
+    document.querySelector('.skip-btn').style.display='none';
+  }
 </script>
 </body>
 </html>
-
 
